--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          path: 'myscript.py'
+          fetch-depth: 0
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
